--- a/source/stylesheets/gitlab-ee-standalone.css.scss
+++ b/source/stylesheets/gitlab-ee-standalone.css.scss
@@ -172,3 +172,9 @@ body {
     }
   }
 }
+
+.admin-control {
+  .features-description {
+    margin-top: 0;
+  }
+}
